--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ header {
     padding: 0;
     margin: 0;    
     position: absolute;
+    position: sticky;
 }
 
 #pagetitle {
@@ -40,16 +41,17 @@ header {
 
 main {
     width: 100%;
-    margin-left: 10%;
-    margin-top: 100px;
+    padding-top: 100px;
 } 
 
 #cards {
-    max-width: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-bottom: 100px;
     display: grid;
     grid-template-columns: repeat(auto-fill, 260px);
     row-gap: 10px;
-    
+    overflow-y: hidden;
 }
 
 #card {
