--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@ header {
     background-color: #1E1F1C;
     padding: 0;
     margin: 0;    
-    position: absolute;
     position: sticky;
 }
 
@@ -18,6 +17,17 @@ header {
     text-align: left;
     margin-left: 80px;
     float: left;
+    position: relative;
+}
+
+#pagetitle img {
+    float: left;
+    height: 40%;
+    width: 48px;
+}
+
+#pagetitle h1 {
+    float: right;
 }
 
 #blogCounter {
