--- a/css/styles.css
+++ b/css/styles.css
@@ -56,17 +56,17 @@ main {
 
 #cards {
     margin-left: 10%;
+    margin-right: 10%;
     padding-bottom: 100px;
     display: grid;
     grid-template-columns: repeat(auto-fill, 260px);
     row-gap: 10px;
     overflow-y: hidden;
-    
 }
 
 #card {
     display: block;
-    height: 100px;
+    height: 150px;
     width: 250px;
     background-color: white;
     border:thin solid black;
@@ -82,7 +82,7 @@ main {
 }
 
 #card p{
-    height: 80px;
+    max-height: 125px;
     word-wrap: break-all;
     overflow-y: auto;
     overflow-x: hidden;
